tests/NormalTests/paczka1/fuzzy1/34876597.err
Error in line 3: LtpcXn A150 17,6
Error in line 10: LtpcXn A62 48,5
Error in line 32: LtpcXn A150 63,9
Error in line 35: LtpcXn A974 35,1
Error in line 38: LtpcXn A62 4,3
